--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:21.0.3'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.google.android.gms:play-services:7.5.0'
+    compile 'com.loopj.android:android-async-http:1.4.5'
 }
