--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.loopj.android:android-async-http:1.4.5'
+    compile 'com.android.support:design:22.2.0'
 }
